ARROW-14156: [C++] Properly synthesize validity buffer in StructArray::Flatten